--- a/server/src/api/static/css/index.css
+++ b/server/src/api/static/css/index.css
@@ -79,6 +79,95 @@ select {
 
 html {
   font-size: 62.5%;
-body {
   font-family: sans-serif;
+}
+
+/* STYLES */
+body {
+  background: repeating-linear-gradient(
+    135deg,
+    #ffffff,
+    #ffffff 80px,
+    #fff9a8 80px,
+    #fff9a8 110px
+  );
+  /* background: #fff9a8; */
+  /* background: #fffcd4; */
+  /* background: rgb(255, 254, 250);
+  background: linear-gradient(
+    135deg,
+    rgba(255, 254, 250, 1) 0%,
+    rgba(255, 252, 212, 1) 100%
+  ); */
+  height: 100vh;
+}
+.container {
+  align-items: flex-start;
+  display: flex;
+  flex-flow: column;
+  justify-content: flex-start;
+  margin: 0 auto;
+  max-width: 800px;
+  padding-top: 60px;
+  /* width: fit-content; */
+}
+h1 {
+  background-color: #2466ff;
+  box-shadow: 10px 12px black;
+  color: white;
+  font-family: europa, sans-serif;
+  font-size: 6rem;
+  font-style: italic;
+  font-weight: 700;
+  padding: 0 24px 0 20px;
+  margin-bottom: 50px;
+  width: fit-content;
+}
+
+form,
+.output {
+  background: white;
+  /* background-color: #fffcd4; */
+  /* border: 12px solid #2466ff; */
+  border: 4px solid #2466ff;
+  box-shadow: 10px 12px black;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  padding: 20px 20px 32px;
+  width: 100%;
+}
+
+label,
+h3 {
+  color: #2466ff;
+  font-family: source-code-pro;
+  font-size: 1.6rem;
+  font-style: italic;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+input {
+  background: white;
+  border: 4px solid #2466ff;
+  font-family: source-code-pro;
+  font-size: 1.6rem;
+  font-style: italic;
+  font-weight: 300;
+  margin-bottom: 40px;
+  padding: 10px;
+}
+
+button {
+  background-color: #2466ff;
+  border: none;
+  box-shadow: 10px 12px black;
+  color: white;
+  font-family: source-code-pro, monospace;
+  font-size: 1.6rem;
+  font-style: italic;
+  font-weight: 700;
+  padding: 8px 24px;
+  width: fit-content;
 }
