--- a/server/src/api/static/css/index.css
+++ b/server/src/api/static/css/index.css
@@ -108,7 +108,7 @@ body {
   justify-content: flex-start;
   margin: 0 auto;
   max-width: 800px;
-  padding-top: 60px;
+  padding: 60px 10px 0;
   /* width: fit-content; */
 }
 h1 {
@@ -138,8 +138,7 @@ form,
   width: 100%;
 }
 
-label,
-h3 {
+label {
   color: #2466ff;
   font-family: source-code-pro;
   font-size: 1.6rem;
@@ -154,7 +153,7 @@ input {
   font-family: source-code-pro;
   font-size: 1.6rem;
   font-style: italic;
-  font-weight: 300;
+  font-weight: 400;
   margin-bottom: 40px;
   padding: 10px;
 }
